--- a/Kurzusok/Kurzusok/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Kurzusok/Kurzusok/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,32 +5,50 @@
     Layout = "/Views/Shared/_SignInLayout.cshtml";
     ViewData["Title"] = "Belépés";
 }
-@*<img src="https://eszk.sze.hu/images/ARCULAT/Logok/sze_logo_fekvo_RGB_white_bg.png" id="bgimg" />*@
-<h1 class="mb-6">Kurzuskiírási rendszer</h1>
-<form class="form-signin" id="account" method="post">
-    <h2 class="h3 mb-3 font-weight-normal">Bejelentkezés</h2>
-    <hr />
-    <section>
-        <div class="form-group">
-            <label asp-for="Input.UserName" class="sr-only">Felhasználó név</label>
-            <input asp-for="Input.UserName" class="form-control" placeholder="Felhasználó név" required="" autofocus="" />
-            <span asp-validation-for="Input.UserName" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="Input.Password" class="sr-only">Jelszó</label>
-            <input type="password" asp-for="Input.Password" class="form-control" placeholder="Jelszó" required="" />
-            <span asp-validation-for="Input.Password" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <button class="btn btn-lg btn-primary btn-block" type="submit">Bejelentkezés</button>
-        </div>
-        <div class="form-group">
-            <p>
-                <a id="forgot-password" asp-page="./ForgotPassword">Elfelejtette a jelszavát?</a>
-            </p>
-        </div>
-    </section>
-</form>
+<div class="row">
+    <div class="border border-secondary shadow rounded align-self-center py-5 px-4 bg-white">
+        <h1 class="mb-6">Kurzuskiírási rendszer</h1>
+        <form class="form-signin" id="account" method="post">
+            <h2 class="h3 mb-3 font-weight-normal">Bejelentkezés</h2>
+            <hr />
+            <section>
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group">
+                    <label asp-for="Input.UserName" class="sr-only">Felhasználó név</label>
+                    <input asp-for="Input.UserName" class="form-control" placeholder="Felhasználó név" required="" autofocus="" />
+                    <span asp-validation-for="Input.UserName" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Input.Password" class="sr-only">Jelszó</label>
+                    <input type="password" asp-for="Input.Password" class="form-control" placeholder="Jelszó" required="" />
+                    <span asp-validation-for="Input.Password" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <button class="btn btn-lg btn-primary btn-block" type="submit">Bejelentkezés</button>
+                </div>
+                <div class="form-group">
+                    <p>
+                        <a class="text-dark" id="forgot-password" asp-page="./ForgotPassword">Elfelejtette a jelszavát?</a>
+                    </p>
+                </div>
+            </section>
+        </form>
+    </div>
+</div>
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
+}
+@section bgimage{
+    <style type="text/css">
+        body {
+            background-image: url('/sze_logo_fekvo_RGB_white_bg.png');
+            background-color: rgba(169,169,169,0.5);
+            background-blend-mode: lighten;
+            background-size: 100%;
+            background-repeat: no-repeat;
+            background-position: top;
+            margin: 0;
+            min-height: 100%;
+        }
+    </style>
 }
