--- a/Kurzusok/Kurzusok/Views/Shared/_SignInLayout.cshtml
+++ b/Kurzusok/Kurzusok/Views/Shared/_SignInLayout.cshtml
@@ -6,14 +6,14 @@
     <title>Bejelentkezés</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="~/css/signin.css" />
+    @RenderSection("bgimage", required: false)
 </head>
 <body class="text-center">
-    <div class="w-100">
+    <div class="w-85">
         @RenderBody()
     </div>
     <script src="~/lib/jquery/dist/jquery.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrapmin.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
     @RenderSection("Scripts", required: false)
 </body>
 </html>
