--- a/Kurzusok/Kurzusok/Views/Home/Index.cshtml
+++ b/Kurzusok/Kurzusok/Views/Home/Index.cshtml
@@ -1,10 +1,16 @@
 ﻿@model Kurzusok.ViewModels.HomeViewModel
-
+@using Microsoft.AspNetCore.Http;
 @{
     ViewData["Title"] = "Kurzusok";
     string date = Model.CurrentSemester.Date;
     string id = Model.CurrentSemester.Id.ToString();
     string lastSemester = Model.SemestersList.Last().Date;
+    string training = Context.Session.GetString("Training");
+    if (string.IsNullOrEmpty(training))
+    {
+        training = "Nappali";
+        Context.Session.SetString("Training","Nappali");
+    }
     int colthespan = 6;
     List<string> whoCommented = new List<string>();
     string commentHelper, displayComment;
@@ -12,10 +18,14 @@
 
 <div class="container-fluid">
     <h1>@date félév</h1>
+    <h3>@training tagozat</h3>
     @if (User.IsInRole("Admin"))
     {
         <a class="btn btn-danger" data-toggle="modal" data-target="#applySemesterDelete">Félév törlése</a>
         <button type="button" class="btn btn-primary" data-toggle="subject-modal" data-target="#addSubject" id="createsubject" data-url="@Url.Action("CreateSubject")" data-id="@id">Tárgy hozzáadása</button>
+    }
+    @if (Model.CurrentSemester.Subjects.Count != 0)
+    {
         <div class="btn-group float-right" role="group" id="opencloseButtons">
             <button type="button" class="btn btn-primary" id="allopen">Táblák nyitása</button>
             <button type="button" class="btn btn-secondary mr-0 ml-0 pr-0 pl-0" disabled></button>
@@ -26,7 +36,7 @@
 <div id="PlaceHolderHere"></div>
 
 @*Course delete*@
-<div class="modal fade  course-delete-modal" id="applyCourseDelete" tabindex="-1" role="dialog" aria-labelledby="applyCourseDelete" aria-hidden="true">
+<div class="modal fade course-delete-modal" id="applyCourseDelete" tabindex="-1" role="dialog" aria-labelledby="applyCourseDelete" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -47,7 +57,7 @@
 </div>
 
 @*Semester delete*@
-<div class="modal fade" id="applySemesterDelete" tabindex="-1" role="dialog" aria-labelledby="applySemesterDelete" aria-hidden="true">
+<div class="modal fade" id="applySemesterDelete" tabindex="-1" role="dialog" aria-labelledby="applySemesterDelete" aria-hidden="true" ar>
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -173,23 +183,31 @@
                     <div class="align-items-center d-flex text-center m-auto flex-grow-1 mt-lg-1">
 
                         <div class="text-right">
-                            @if (item.EHours != null)
+                            @if (training == "Levelezős")
                             {
-                                <strong>Elmélet: </strong>
-                                @Html.DisplayFor(modelItem => item.EHours)
-                                <br />
+                                <strong>Óraszám: </strong>
+                                @Html.DisplayFor(modelItem => item.CorrespondHours)
                             }
-                            @if (item.GyHours != null)
+                            else
                             {
-                                <strong>Gyakorlat:</strong>
-                                @Html.DisplayFor(modelItem => item.GyHours)
-                                <br />
-                            }
-                            @if (item.LHours != null)
-                            {
-                                <strong>Labor:</strong>
-                                @Html.DisplayFor(modelItem => item.LHours)
-                                <br />
+                                @if (item.EHours != null)
+                                {
+                                    <strong>Elmélet: </strong>
+                                    @Html.DisplayFor(modelItem => item.EHours)
+                                    <br />
+                                }
+                                @if (item.GyHours != null)
+                                {
+                                    <strong>Gyakorlat:</strong>
+                                    @Html.DisplayFor(modelItem => item.GyHours)
+                                    <br />
+                                }
+                                @if (item.LHours != null)
+                                {
+                                    <strong>Labor:</strong>
+                                    @Html.DisplayFor(modelItem => item.LHours)
+                                    <br />
+                                }
                             }
                         </div>
                     </div>
@@ -224,7 +242,6 @@
                                     {
                                         @Html.Raw(", ")
                                         <u>kötelező</u>
-
                                     }
                                     else
                                     {
@@ -235,7 +252,6 @@
                                 </li>
                             }
                         </ul>
-
                     </div>
                 </div>
             </div>
@@ -256,9 +272,12 @@
                                 <th scope="col">
                                     Kurzus kód
                                 </th>
-                                <th scope="col">
-                                    Óraszám
-                                </th>
+                                @if (training == "Nappali")
+                                {
+                                    <th scope="col">
+                                        Óraszám
+                                    </th>
+                                }
                                 <th scope="col">
                                     Terem, szoftver igény
                                 </th>
@@ -280,32 +299,34 @@
                         <tbody>
                             @foreach (var course in item.Courses)
                             {
-                                <tr>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => course.CourseType)
-                                    </td>
-                                    <td>
-                                        @foreach (var teacher in course.TeachersLink)
-                                        {
-                                            @Html.DisplayFor(modelItem => teacher.Teacher.Name)
-                                            <br />
-                                        }
-                                    </td>
-                                    <td>
-                                        @foreach (var teacher in course.TeachersLink)
-                                        {
-                                            @Html.DisplayFor(modelItem => teacher.Loads)
-                                            @Html.Raw(" %")
-                                            <br />
-                                        }
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => course.CourseCode)
-                                    </td>
+                            <tr>
+                                <td>
+                                    @Html.DisplayFor(modelItem => course.CourseType)
+                                </td>
+                                <td>
+                                    @foreach (var teacher in course.TeachersLink)
+                                    {
+                                        @Html.DisplayFor(modelItem => teacher.Teacher.Name)
+                                        <br />
+                                    }
+                                </td>
+                                <td>
+                                    @foreach (var teacher in course.TeachersLink)
+                                    {
+                                        @Html.DisplayFor(modelItem => teacher.Loads)
+                                        @Html.Raw(" %")
+                                        <br />
+                                    }
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => course.CourseCode)
+                                </td>
+                                @if (training == "Nappali")
+                                {
                                     <td>
                                         @Html.DisplayFor(modelItem => course.Hours)
                                     </td>
-
+                                }
                                     <td>
                                         @if (course.Classroom != null)
                                         {
@@ -460,24 +481,32 @@
                         @Html.DisplayFor(modelItem => item.Name)
                     </td>
                     <td @{if (courseCount != 0) { <text> rowspan="@courseCount" </text>  } }>
-                        @if (item.EHours != null)
+                        @if (training == "Levelezős")
                         {
-                            @Html.Raw("Elmélet: ")
-                            @Html.DisplayFor(modelItem => item.EHours)
-                            <br />
+                            @Html.DisplayFor(modelItem => item.CorrespondHours)
                         }
-                        @if (item.GyHours != null)
+                        else
                         {
-                            @Html.Raw("Gyakorlat: ")
-                            @Html.DisplayFor(modelItem => item.GyHours)
-                            <br />
+                            @if (item.EHours != null)
+                            {
+                                @Html.Raw("Elmélet: ")
+                                @Html.DisplayFor(modelItem => item.EHours)
+                                <br />
+                            }
+                            @if (item.GyHours != null)
+                            {
+                                @Html.Raw("Gyakorlat: ")
+                                @Html.DisplayFor(modelItem => item.GyHours)
+                                <br />
+                            }
+                            @if (item.LHours != null)
+                            {
+                                @Html.Raw("Labor: ")
+                                @Html.DisplayFor(modelItem => item.LHours)
+                                <br />
+                            }
                         }
-                        @if (item.LHours != null)
-                        {
-                            @Html.Raw("Labor: ")
-                            @Html.DisplayFor(modelItem => item.LHours)
-                            <br />
-                        }
+
                     </td>
                     <td @{if (courseCount != 0) { <text> rowspan="@courseCount" </text>  } }>
                         @foreach (var programme in item.ProgrammesLink)
@@ -697,8 +726,28 @@
                     {
                         if (date != item.Date)
                         {
-                            <a class="text-dark nav-link" role="menuitem" tabindex="-1" asp-route-currentSemesterId="@item.Id" onclick="clearCollapse()">@item.Date</a>
+                            string temptrain = "Nappali";
+                            if (training=="Levelezős")
+                            {
+                                temptrain = "Levelezos";
+                            }
+                            <a class="text-dark nav-link" role="menuitem" tabindex="-1" asp-route-currentSemesterId="@item.Id" asp-route-training="@temptrain" onclick="clearCollapse()">@item.Date</a>
                         }
+                    }
+                </div>
+            </li>
+            <li class="nav-item pb-1 height">
+                <a class="nav-link text-dark dropdown-toggle pl-1 py-0 d-inline text-nowrap" id="dropdownMenuTraining" data-toggle="dropdown">
+                    @training tagozat
+                </a>
+                <div class="dropdown-menu p-0 w-75 text-center" aria-labelledby="dropdownMenuTraining" role="menu">
+                    @if (training == "Nappali")
+                    {
+                        <a class="text-dark nav-link text-nowrap px-0" role="menuitem" tabindex="-1" asp-route-currentSemesterId="@id" asp-route-training="Levelezos" onclick="clearCollapse()">Váltás Levelezőre</a>
+                    }
+                    else
+                    {
+                        <a class="text-dark nav-link text-nowrap  px-0" role="menuitem" tabindex="-1" asp-route-currentSemesterId="@id" asp-route-training="Nappali" onclick="clearCollapse()">Váltás nappalira</a>
                     }
                 </div>
             </li>
@@ -721,6 +770,9 @@
             </li>
             <li class="nav-item pb-1">
                 <i class="fas fa-list-ul"></i>
+            </li>
+            <li class="nav-item pb-1">
+                <i class="fas fa-exchange-alt"></i>
             </li>
             @if (User.IsInRole("Admin"))
             {
