--- a/Kurzusok/Kurzusok/Views/Home/_SubjectModalPartial.cshtml
+++ b/Kurzusok/Kurzusok/Views/Home/_SubjectModalPartial.cshtml
@@ -1,6 +1,13 @@
 ﻿@model Subjects
+@using Microsoft.AspNetCore.Http;
 @{
     IList<Programmes> programmes = ViewBag.programmes;
+    string training = Context.Session.GetString("Training");
+    if (string.IsNullOrEmpty(training))
+    {
+        training = "Nappali";
+        Context.Session.SetString("Training", "Nappali");
+    }
 }
 
 <div class="modal subjectmodal" id="addSubject">
@@ -30,46 +37,60 @@
                         <input asp-for="Name" class="form-control" required />
                         <span asp-validation-for="Name" class="text-danger"></span>
                     </div>
-                    <div class="form-group">
-                        <label asp-for="EHours" class="control-label">Elméleti órák száma</label>
-                        <input asp-for="EHours" class="form-control" min="0" />
-                        <span asp-validation-for="EHours" class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="GyHours" class="control-label">Gyakorlati órák száma</label>
-                        <input asp-for="GyHours" class="form-control" min="0" />
-                        <span asp-validation-for="GyHours" class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="LHours" class="control-label">Labor órák száma</label>
-                        <input asp-for="LHours" class="form-control" min="0" />
-                        <span asp-validation-for="LHours" class="text-danger"></span>
-                    </div>
+                    @if (training == "Nappali")
+                    {
+                        <div class="form-group">
+                            <label asp-for="EHours" class="control-label">Elméleti órák száma</label>
+                            <input asp-for="EHours" class="form-control" min="0" />
+                            <span asp-validation-for="EHours" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="GyHours" class="control-label">Gyakorlati órák száma</label>
+                            <input asp-for="GyHours" class="form-control" min="0" />
+                            <span asp-validation-for="GyHours" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="LHours" class="control-label">Labor órák száma</label>
+                            <input asp-for="LHours" class="form-control" min="0" />
+                            <span asp-validation-for="LHours" class="text-danger"></span>
+                        </div>
+                    }
+                    else
+                    {
+                        <div class="form-group">
+                            <label asp-for="CorrespondHours" class="control-label">Órák száma</label>
+                            <input asp-for="CorrespondHours" class="form-control" min="0" />
+                            <span asp-validation-for="CorrespondHours" class="text-danger"></span>
+                        </div>
+                    }
                     <div class="form-group">
                         <label asp-for="EducationType" class="control-label">Képzési forma</label>
                         <select class="custom-select" asp-for="EducationType">
                             <option value="traditional">Jelenléti</option>
-                            <option value="sync">Szinkron</option>
                             <option value="async">Asszinkron</option>
+                            @if (training == "Levelezős")
+                            {
+                                <option value="sync">Szinkron</option>
+                            }
                         </select>
                     </div>
                     <div class="teacherSelect">
-                        <div class="row form-group copyThisDiv">
-                            <div class="col-5 p-1">
-                                <label>Képzés</label>
-                                <select class="custom-select" name="Programmes">
-                                    @foreach (var item in programmes)
+                        <label>Képzés</label>
+                        <div class="d-flex form-group copyThisDiv">
+                            <select class="custom-select mr-3" name="Programmes">
+                                @foreach (var item in programmes)
+                                    if (item.Training == training.ToLower())
                                     {
                                         string prName = item.Name + " " + item.Training;
                                         <option value="@item.ProgrammeId">@prName</option>
                                     }
-                                </select>
-                            </div>
+                                }
+                            </select>
+                            <button type="button" class="btn btn-danger" id="hidedivbutton">x</button>
                         </div>
                     </div>
                     <div class="teacherMoreSelect" id="toCopy"></div>
-                    <button type="button" class="btn btn-secondary" onclick="copyDivContent();">Hozzárendelés másik képzéshez</button>
-
+                    <button type="button" class="btn btn-secondary" onclick="copyDivContent();">Másik képzés hozzáadása</button>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Bezárás</button>
